fix spacing issues with accordion

--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -24,13 +24,12 @@
     flex-direction: column;
     gap: 1rem;
     box-shadow: 0 0.5rem 0.5rem hsla(0, 0%, 73%, 0.35);
-
     border-radius: 0.5rem;
 
     //added
     background-image: url("/images/bg-dots.svg");
     background-repeat: repeat-x;
-    background-position: center 75%;
+    background-position: center 73%;
   }
   
   .smol-card-component > img {
