--- a/sass/layout/_faq.scss
+++ b/sass/layout/_faq.scss
@@ -44,7 +44,7 @@
 
   &__item-header {
     min-height: 70px;
-    width: 340px;
+    width: 90vw;
     margin: 0 auto;
     display: flex;
     align-items: center;
