--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -93,7 +93,7 @@
 
 .shape {
   position: absolute;
-  top: 45px;
+  top: 65px;
   z-index: -1;
   background-color: clr(primary, 200);
   width: 110%;
@@ -105,7 +105,7 @@
     width: 120vw;
     height: 356px;
     left: 173px;
-    top: 121px;
+    top: 120px;
     border-radius: 178px;
   }
 }
